2008-09-16  Martin Leidig  <mleidig@schlund.de>

	AOP-proxied beans, like session-scoped ContextResource beans, shouldn't 
	contain final methods, which can't be proxied (they're called at the proxy 
	itself instead of the proxied objects and work on the proxy's uninitialized 
	state).

	* de/schlund/pfixcore/example/ContextSimpleData.java: removed 'final'
	modifiers from methods

2008-09-15  Martin Leidig  <mleidig@schlund.de>

	* src/org/pustefixframework/config/build/InitResourceUtilTask.java:
	catch IllegalStateException (ignore if docroot is already set, which
	can happen if ant is called with multiple targets, e.g. "ant realclean
	all generate"

2008-09-11  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/context/PageFlowManager.java: 
	* src/de/schlund/pfixcore/workflow/VariantManager.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/internal/ContextConfigImpl.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/internal/PageFlowHolderImpl.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/ContextXMLParsingHandler.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/PageFlowParsingHandler.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/PageFlowVariantParsingHandler.java: 
	* src/org/pustefixframework/config/contextxmlservice/ContextConfig.java: 
	* src/org/pustefixframework/config/contextxmlservice/PageFlowHolder.java: 
	Added support for application specific page flow implementations.

2008-09-11  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* lib/saxon8.jar: 
	* lib/saxon8-dom.jar: 
	* lib/saxon8-xpath.jar: 
	Removed Saxon 8.

	* lib/saxon9.jar: 
	* lib/saxon9-dom.jar: 
	* lib/saxon9-xpath.jar: 
	Added Saxon 9.1.0.2.

2008-09-08  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT error handling: Failed loading of Templates objects
	due to errors in the included stylesheets now displays speaking